# EZAIMD

./: Cargo.toml  LICENSE  README.md
src/: atom.rs  cli.rs  main.rs  simulation.rs  vector.rs  vectored.rs
