[package]
name = "EZAIMD"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.18", features = ["derive"]}
anyhow = "1.0.57"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
rgaussian16 = "0.1.3"
regex = "1.5.6"
thiserror = "1.0.31"
rand_distr = "0.4.3"
rand = "0.8.5"
num-traits = "0.2.15"
